Adding heading,paragraph and list elements to peovide the description,ingredients and steps needed for the recipe.An image is added as well

--- a/recipes/sauerbraten.html
+++ b/recipes/sauerbraten.html
@@ -5,6 +5,36 @@
     </html>
 
     <body>
-        <h1>Sauerbraten</h1>
+        <h1><strong>Sauerbraten</strong></h1>
+        <img src="https://www.allrecipes.com/thmb/p-dHLaIxDwuSU0TpqALsVmEKflA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/221361-traditional-sauerbraten-beauty-4x3-BP-2925-a1b153f8bdfd4e4b840d5c802d3e16a3.jpg" alt="Image of a tradition Sauerbraten">
+        
+        <h2>Description</h2>
+        <p>Sauerbraten is a German roast of marinated meat, traditionally beef. Since it’s generally made with tougher cuts (usually the rump roast), the meat is marinated for days at a time. The roast is sliced and served with a gravy. In some recipes, the gravy is made with gingersnaps.</p>
+        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3-pound beef rump roast</li>
+            <li>2 chopped onions</li>
+            <li>Red wine vinegar</li>
+            <li>Water</li>
+            <li>Salt</li>
+            <li>Black pepper</li>
+            <li>Cloves</li>
+            <li>Bay leaves</li>
+            <li>All purpose floue</li>
+            <li>A tablespoon of white sugar</li>
+            <li>Oil</li>
+            <li>Gingersnaps</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Marinate the meat in the refrigerator for up to three days.</li>
+            <li>Sprinkle seasoned flour over the rump roast.</li>
+            <li>Brown the meat on all sides in oil.</li>
+            <li>Cook the beef in the reserved marinade, covered, over medium-low.</li>
+            <li>Simmer until the beef is tender.</li>
+            <li>Make the gravy and serve it over the sliced beef. </li>
+        </ol>
     </body>
 </html>
