--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipies</h1>
-        <a href="recipes/sauerbraten.html">Sauerbraten</a>
+        <ul>
+            <li><a href="recipes/sauerbraten.html">Sauerbraten</a></li>
+            <li><a href="./recipes/chapati.html">Chapati</a></li>
+        </ul>
     </body>
 </html>
