--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/sauerbraten.html">Sauerbraten</a></li>
             <li><a href="./recipes/chapati.html">Chapati</a></li>
+            <li><a href="./recipes/beans.html">Southern Butter Beans</a></li>
         </ul>
     </body>
 </html>
