Provided a description of the recipe

--- a/recipes/beans.html
+++ b/recipes/beans.html
@@ -8,5 +8,10 @@
     <body>
         <h1>Butter Beans</h1>
         <img src="https://www.allrecipes.com/thmb/H2BQr9MD7Ui0i1rVTNQ-DW1_-Xc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8630469-southern-butter-beans-ddmfs-4x3-e04120d844ab47759946d7f9845c9cff.jpg" alt="A cup of beans">
+
+        <h2>Description</h1>
+        <p>This recipe is chock-full of everything you’d want in Southern butter beans. Bacon, ham hock, chicken stock, aromatics like bay leaves and thyme, and a little sherry vinegar for good measure. And the best part about this recipe is that you dont need to soak the beans </p>
+
+        <h2></h2>
     </body>
 </html>
