Provided the steps needed to make the recipe in the file

--- a/recipes/beans.html
+++ b/recipes/beans.html
@@ -10,8 +10,30 @@
         <img src="https://www.allrecipes.com/thmb/H2BQr9MD7Ui0i1rVTNQ-DW1_-Xc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8630469-southern-butter-beans-ddmfs-4x3-e04120d844ab47759946d7f9845c9cff.jpg" alt="A cup of beans">
 
         <h2>Description</h1>
-        <p>This recipe is chock-full of everything you’d want in Southern butter beans. Bacon, ham hock, chicken stock, aromatics like bay leaves and thyme, and a little sherry vinegar for good measure. And the best part about this recipe is that you dont need to soak the beans </p>
+        <p>This recipe is chock-full of everything you would want in Southern butter beans. Bacon, ham hock, chicken stock, aromatics like bay leaves and thyme, and a little sherry vinegar for good measure. And the best part about this recipe is that you dont need to soak the beans </p>
 
-        <h2></h2>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 thick-cut slices bacon, chopped</li>
+            <li>1 yellow onion, chopped</li>
+            <li>3 cloves garlic, sliced</li>
+            <li>1 teaspoon freshly ground black pepper</li>
+            <li>6 cups lower-sodium chicken stock, plus more as needed</li>
+            <li>1 pound dried large lima beans</li>
+            <li>1 (14 ounce) smoked ham hock</li>
+            <li>2 fresh or dried bay leaves</li>
+            <li>2 thyme sprigs</li>
+            <li>1/2 teaspoon kosher salt</li>
+            <li>1 teaspoon sherry vinegar</li>
+            <li>thyme leaves, for garnish</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Gather all ingredients</li>
+            <li>Place bacon in a large Dutch oven or large pot, and cook over medium heat, stirring occasionally, until crispy, about 8 minutes. Add onion, garlic, and pepper; cook, stirring often, until onion is soft and translucent, about 5 minutes.</li>
+            <li>Add chicken stock, beans, ham hock, bay leaves, thyme sprigs, and salt; bring to a boil over medium-high. Reduce heat to medium-low; cover and simmer, stirring occasionally, until beans are tender, 2 1/2 to 3 hours, adding stock or water as needed to keep beans covered by about 1/4 inch. Stop adding liquid during last 30 minutes of cooking so beans are not too brothy.</li>
+            <li>Remove ham hock; pick meat, discard hock, and stir meat into beans. Remove and discard bay leaves and thyme sprigs. Stir in sherry vinegar. Divide beans evenly among bowls. Garnish with thyme leaves and additional pepper.</li>
+        </ol>
     </body>
 </html>
