Added the rel and target attribute to all the links in the index page.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <h1>Odin Recipies</h1>
         <ul>
-            <li><a href="recipes/sauerbraten.html">Sauerbraten</a></li>
-            <li><a href="./recipes/chapati.html">Chapati</a></li>
-            <li><a href="./recipes/beans.html">Southern Butter Beans</a></li>
+            <li><a href="recipes/sauerbraten.html" target="_blank" rel="noopener noreferrer">Sauerbraten</a></li>
+            <li><a href="./recipes/chapati.html" target="_blank" rel="noopener noreferrer">Chapati</a></li>
+            <li><a href="./recipes/beans.html" target="_blank" rel="noopener noreferrer">Southern Butter Beans</a></li>
         </ul>
 
-        <h2><a href="https://www.allrecipes.com/">Source</a></h2>
+        <h2><a href="https://www.allrecipes.com/" target="_blank" rel="noopener noreferrer">Source</a></h2>
     </body>
 </html>
